Update title and input placeholder in index.html

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gemini Chat</title>
-  <link rel="stylesheet" href="style.css">
+  <title>⚡ 072GPT Web</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="bg"></div>
   <div class="chat-container">
-    <h2>🤖 Gemini Chat</h2>
+    <h2 class="title">⚡ 072GPT Web</h2>
     <div id="chat-box"></div>
     <div class="input-container">
-      <input type="text" id="user-input" placeholder="Type your message..." autofocus>
+      <input type="text" id="user-input" placeholder="💬 Type message..." autofocus />
       <button id="send-btn">Send</button>
     </div>
   </div>
@@ -22,11 +23,14 @@
     const sendBtn = document.getElementById("send-btn");
 
     function appendMessage(role, text) {
-      const msg = document.createElement("div");
-      msg.classList.add(role);
-      msg.textContent = text;
-      chatBox.appendChild(msg);
+      const div = document.createElement("div");
+      div.classList.add("msg", role);
+      div.textContent = text;
+      chatBox.appendChild(div);
       chatBox.scrollTop = chatBox.scrollHeight;
+
+      // Floating animation
+      setTimeout(() => div.classList.add("show"), 100);
     }
 
     async function sendMessage() {
@@ -35,13 +39,15 @@
       appendMessage("user", text);
       userInput.value = "";
       appendMessage("bot", "Typing...");
+
       const res = await fetch("/ask", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ message: text }),
+        body: JSON.stringify({ message: text })
       });
       const data = await res.json();
-      document.querySelector(".bot:last-child").textContent = data.reply;
+      const lastBot = document.querySelector(".bot:last-child");
+      lastBot.textContent = data.reply;
     }
 
     sendBtn.addEventListener("click", sendMessage);
